# LizardProject_Final

./: LICENSE  README.md  pyproject.toml  requirements.txt
cluster/: slurm_chunked_dlc_tapnext.py  submit_chunked_pipeline.sbatch  submit_dlc_train.sbatch
configs/: default.yaml
scripts/: export_dlc_queries.py  init_dlc_project.py  render_overlay.py  run_pipeline.py  submit_chunked_pipeline.sbatch  submit_dlc_train.sbatch  train_dlc.py
src/tapnext_dlc_tracker/: __init__.py  config.py  deeplabcut_bridge.py  fusion.py  npz_queries.py  pipeline.py  tapnext_client.py  tapnext_torch_runtime.py  timegrid.py  types.py
