[project]
name = "tapnext-dlc-tracker"
version = "0.1.0"
description = "Hybrid point tracking pipeline: TapNext + DeepLabCut supervision every 3 seconds."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dlc = [
  "deeplabcut>=2.3",
]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
